[gd_scene load_steps=9 format=3 uid="uid://dxpc2iac0hjpw"]

[ext_resource type="Script" path="res://scripts/card_3d.gd" id="1_3lwb8"]
[ext_resource type="Texture2D" uid="uid://bnpfq6edp6cmm" path="res://asset_lib/simple-card-pile-ui/assets/card_clubs_A.png" id="2_mu1nt"]
[ext_resource type="Texture2D" uid="uid://ben7qqx34vpkq" path="res://asset_lib/simple-card-pile-ui/assets/card_back.png" id="3_mqdk5"]

[sub_resource type="PlaneMesh" id="PlaneMesh_o3bng"]
size = Vector2(2.5, 3.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v6yen"]
albedo_texture = ExtResource("2_mu1nt")

[sub_resource type="PlaneMesh" id="PlaneMesh_a5dw2"]
size = Vector2(2.5, 3.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k64yj"]
albedo_texture = ExtResource("3_mqdk5")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_21kd5"]
points = PackedVector3Array(-1.25, 1.75, 0, -1.25, -1.75, 0, 1.25, -1.75, 0, 1.25, 1.75, 0)

[node name="Card3D" type="Node3D"]
script = ExtResource("1_3lwb8")

[node name="CardFrontMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_o3bng")
surface_material_override/0 = SubResource("StandardMaterial3D_v6yen")

[node name="CardBackMesh" type="MeshInstance3D" parent="CardFrontMesh"]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0)
mesh = SubResource("PlaneMesh_a5dw2")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_k64yj")

[node name="StaticBody3D" type="StaticBody3D" parent="CardFrontMesh"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CardFrontMesh/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_21kd5")

[connection signal="input_event" from="CardFrontMesh/StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="mouse_entered" from="CardFrontMesh/StaticBody3D" to="." method="_on_static_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="CardFrontMesh/StaticBody3D" to="." method="_on_static_body_3d_mouse_exited"]
